# ECE_263_FinalProject

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json
src/include/: library.h  mail.h  pr1.h  pr2.h  prj.h  process.h  project.h
src/main/: prj2.c  process.c  proj_main.c  project.c
